--- a/posts/85.md
+++ b/posts/85.md
@@ -18,12 +18,16 @@ Because if I'm not putting 100% effort into my work, then won't I fall behind to
 
 But the more I think about it, the more it made sense.
 
-When I practiced for my Grade 8 ABRSM practical exam, I noticed diminishing returns as I practiced too much. I would make more mistakes than usual, and instead of focusing on my "form", I focused on correcting the mistakes. I was clenching my fists while pushing towards the finish line.
+When I practiced for my Grade 8 ABRSM Piano practical exam, I noticed diminishing returns as I practiced too much. My fingers would start tensing and start hitting the wrong keys. I forgot to relax. I was clenching my fists, pushing towards the finish line.
 
-When I studied for my final round interview with Glassdoor, overoptimized on the wrong things. I studied everything I could about AB tests, read dozens of articles, memorized the concepts, but never thought about reviewing what I had on my resume. I was racing down the finish line with perfect form, but it was the wrong race track.
+When I studied for my final round interview with Glassdoor, overoptimized on the wrong things. I studied everything I could about AB tests, read dozens of articles, memorized the concepts. I passed the AB testing case study portion, but failed to explain what I had on my resume with any detail. I was racing down the finish line with perfect form, but it was the wrong race track.
 
-As I'm graduating soon, every day feels like a race against time. Even though I'm running at 110%, I'm still not fast enough. As an international student, I told myself I have to stand out from the rest, I need to put in more work while everyone else parties and has fun, and I can have fun later.
+As I'm graduating soon, every day feels like a race against time. I'm running at 110%, but it's still not fast enough.
 
-But all this "productivity" is backfiring. I'm burntout and exhausted, and with GERD on top of everything, I can't remember the last time I felt healthy.
+As an international student, I tell myself I have to stand out from the rest, I need to put in more work while everyone else parties and has fun, and I can have fun later.
 
-Hopefully, writing this out will implant the 85% rule into my brain. Where I will learn relaxation by scheduling breaks and being outside more, and stop maximing performance and perfection by doing just enough.
+But all this "productivity" is backfiring. I'm burntout and exhausted. And with GERD on top of everything, I can't remember the last time I felt healthy.
+
+Hopefully, writing this out will implant the 85% rule into my brain.
+
+Where I will learn relaxation by scheduling breaks and being outside more, and stop maximing performance and perfection by doing just enough.
