--- a/posts/85.md
+++ b/posts/85.md
@@ -31,3 +31,7 @@ But all this "productivity" is backfiring. I'm burntout and exhausted. And with 
 Hopefully, writing this out will implant the 85% rule into my brain.
 
 Where I will learn relaxation by scheduling breaks and being outside more, and stop maximing performance and perfection by doing just enough.
+
+## Changelog
+
+- May 4, 2023: Found out the 85% rule is backed by a [study](https://www.nature.com/articles/s41467-019-12552-4) in 2019 on Nature Communications
