Edit 3 things article

--- a/posts/3.md
+++ b/posts/3.md
@@ -12,19 +12,21 @@ Lately, I've been focusing on just doing three things for the day.
 
 Here's the system that I've been using, which draws from the [Bento method](https://www.bentomethod.com/bentomethod).
 
-Your tasks are split into 3 categories:
+My tasks are split into 3 categories:
 
-- large (P1): Deep work that requires intense focus like writing articles and coding. (90+ mins)
-- medium (P2): Busy work that are process-based like collecting data, editing, and organizing information. (45-60 mins)
-- short (P3): Habitual work like reading emails, cleaning the house, listening to podcast. (15-30 mins)
+- large (P1): Deep work that requires intense focus like writing articles, doing assignments, coding. (90+ mins)
+- medium (P2): Busy work that are process-based like research, editing, and organizing information. (45-60 mins)
+- short (P3): Habitual work like reading emails, catching up on news, doing the dishes, listening to podcasts. (15-30 mins)
 
 So what are the three things?
 
 For me, they comprise of one P1 task, and two P2 task. And however many P3 tasks that I perform on autopilot, like making my daily protein shake and listening to podcasts on the way to class, or doing laundry on the weekend.
 
-Now that you know how many, the question is when.
+Now, there's also the question of when.
 
-Your energy level throughout the day look like this:
+If you do time-blocking, how should you fit these tasks into your day?
+
+Your energy level throughout the day has 3 brackets too:
 
 - peak: mind and body are at their highest functioning form
 - through: exhausted from work during your peak period and need time and rest to replenish.
