--- a/posts/20h.md
+++ b/posts/20h.md
@@ -6,7 +6,7 @@ date: 'May 1, 2023'
 
 > The major barrier to skill acquisition is not intellectual... it's emotional
 
-You've probably heard of the 10,000-hour rule, an idea popularized by Malcom Gladwell in his book _Outliers_.
+You've probably heard of the 10,000-hour rule, an idea popularized by Malcolm Gladwell in his book _Outliers_.
 
 Apparently, that has been [debunked](https://www.vox.com/science-and-health/2019/8/23/20828597/the-10000-hour-rule-debunked).
 
@@ -21,7 +21,7 @@ He shares the following methods in his [TED talk](https://www.youtube.com/watch?
 
 **First**, decide exactly what you want to be able to do when you're done.
 
-Is it coding your own personal portolio in React & Next.js? Building blazingly fast app using Rust? Creating a compiler from scratch? Be specific.
+Is it coding your own personal portfolio in React & Next.js? Building blazingly fast app using Rust? Creating a compiler from scratch? Be specific.
 
 Skills are just big bundles of other skills. Look into the skills you need to achieve it and deconstruct; break it down into smaller pieces.
 
@@ -33,7 +33,7 @@ To practice, you need reliable sources. Do some research, find 3-5 best resource
 
 Learning is getting better at noticing when you're making a mistake, and doing something a little different every time.
 
-In programming, that means having the ability to debug and fix errors in your code. It also means spotting opportunities to make your code more optmized.
+In programming, that means having the ability to debug and fix errors in your code. It also means spotting opportunities to make your code more optimized.
 
 **Third**, life is full of distractions and the internet is full of noise. They get into the way of practicing.
 
