--- a/posts/3.md
+++ b/posts/3.md
@@ -6,7 +6,7 @@ date: 'May 5, 2023'
 
 I used to squeeze my to-do list with a lot of tasks, I felt I should spend every minute of my day efficiently. But that was a recipe for burnout.
 
-I would end up overwhelmed and dissapointed, feeling I barely accomplished much at the end of the day.
+I would end up overwhelmed and disappointed, feeling I barely accomplished much at the end of the day.
 
 Lately, I've been focusing on just doing three things for the day.
 
