--- a/posts/85.md
+++ b/posts/85.md
@@ -30,7 +30,7 @@ But all this "productivity" is backfiring. I'm burntout and exhausted. And with 
 
 Hopefully, writing this out will implant the 85% rule into my brain.
 
-Where I will learn relaxation by scheduling breaks and being outside more, and stop maximing performance and perfection by doing just enough.
+Where I will learn relaxation by scheduling breaks and being outside more, and stop maximizing performance and perfection by doing just enough.
 
 ## Changelog
 
