--- a/posts/050324.md
+++ b/posts/050324.md
@@ -36,7 +36,7 @@ And this [japan cat island](https://www.youtube.com/watch?v=wjfuB8Xjhc4).
 
 I want to travel so bad.
 
-I stumbled on a couple cute videos like [how to wash a kitton without making it to scared](https://www.youtube.com/watch?v=ymxEmbALjIo) and this [Shiba Inu store clerk](https://www.youtube.com/watch?v=E6CcUj2mDbI)
+I stumbled on a couple cute videos like [how to wash a kitten](https://www.youtube.com/watch?v=ymxEmbALjIo) and this [Shiba Inu store clerk](https://www.youtube.com/watch?v=E6CcUj2mDbI)
 
 I've been binging on photography videos, I found this really good series on [Visual Patterns](https://www.youtube.com/playlist?list=PLTQtLjIqecdydlanOGh6iwoWOb9VxpDts). Going to dive deeper into this when I get my camera and start shooting.
 
