--- a/posts/o1.md
+++ b/posts/o1.md
@@ -18,23 +18,16 @@ It has no quotas, no travel restrictions, and you can bring your family with you
 
 Specifically the O1-A visa is for people who have shown extraordinary abilities in fields such as business, athletics, education, and science, and based on an employment setup.
 
-You have to satisfy the following
+You have to satisfy the following 8 [criteries](https://drive.google.com/file/d/1SXXnFigY05XW3jTh5HMk9hMSpNLIdBmh/view):
 
-1. Critical role: You perform a crucial role at a respected
-   company or startup.
-2. Memberships: You belong to a group that requires great
-   achievements, as judged by experts.
-3. High remuneration: You receive a large salary or other
-   substantial compensation.
-4. Awards: You have won national or global awards for
-   excellence in your field.
-5. Press: Respected publications or major media
-   outlets have published articles about you.
-6. Scholarly articles: You have written articles for important
-   publications in your field.
-7. Original contributions: You have made important, new contributions to your field.
-8. Judging: You have judged the work of your peers
-   individually or on a panel.
+1. **Critical role**: You perform a crucial role at a respected company or startup.
+2. **Memberships**: You belong to a group that requires great achievements, as judged by experts.
+3. **High remuneration**: You receive a large salary or other substantial compensation.
+4. **Awards**: You have won national or global awards for excellence in your field.
+5. **Press**: Respected publications or major media outlets have published articles about you.
+6. **Scholarly articles**: You have written articles for important publications in your field.
+7. **Original contributions**: You have made important, new contributions to your field.
+8. **Judging**: You have judged the work of your peers individually or on a panel.
 
 Some things I learned from the call
 
