add legion of honor

--- a/posts/020724.md
+++ b/posts/020724.md
@@ -4,6 +4,8 @@ tags: 'journal'
 date: 'Jul 2, 2024'
 ---
 
+![Legion of Honor Museum](/images/legionofhonor.jpeg)
+
 - yerba buena, AMC
 - Most restaurants only open past 10am
 - Moscow center
@@ -16,8 +18,7 @@ date: 'Jul 2, 2024'
 - SF association of the blind
 - Nanay = mother in filipino
 - Sightglass coffee
-- 7th & Folsom St
-- 27 blue bus
+- 7th & Folsom St, 27 blue bus -> chinatown
 - Geary, post, sutter, bush, pine
 - Where is California st Starbucks? – old korean lady
 - Cheonman-eyo = welcome
@@ -28,12 +29,13 @@ date: 'Jul 2, 2024'
 - Ju Gao dry goods store
 - The church of Jesus Christ of Latter Day saints
 - sudden urge to get new balance shoes, recs are NB 990v3 / NB 990v6 / NB 993
-- Take 38R bus from chinatown to Richmond
-- 2nd to 48 ave
+- Take 38R bus from Chinatown to Richmond
+- 2nd to 48th ave in Richmond
 - Self help for the elderly
-- Geary blvd & 33rd Ave -> 18 blue bus
+- Geary blvd & 33rd Ave, 18 blue bus -> Legion of Honor
 - I need that trader joe blue and white bag
 - Legion of Honor museum is a replica of The Palais de la Légion d'honneur in Paris
+- free every first tuesday of the month!
 - Honneur Et Patrie = Honor and Country
 - El camino del mar
 - Matson cargo ship
