edit: it was seneca not socrates

--- a/posts/040724.md
+++ b/posts/040724.md
@@ -6,7 +6,7 @@ date: 'Jul 4, 2024'
 
 morning walk to ferry building
 
-- been feeling kinda empty and anxious ever since i arrived. It reminds me of what socrates said that moving to a different place won’t cure whatever problems you have, you’re just bringing them with you. i thought once i landed in SF id be happy again, and excited and positive, this is everything i wanted since i left, but why do i feel empty? was this not what i wanted? maybe it's the change, and change takes time, and change is good. i might be clinging on to the past. wanting things to stay the same. it's comfortable that way.
+- been feeling kinda empty and anxious ever since i arrived. It reminds me of what seneca said that moving to a different place won’t cure whatever problems you have, you’re just bringing them with you. i thought once i landed in SF id be happy again, and excited and positive, this is everything i wanted since i left, but why do i feel empty? was this not what i wanted? maybe it's the change, and change takes time, and change is good. i might be clinging on to the past. wanting things to stay the same. it's comfortable that way.
 - this past week was difficult. Learning how to manage my emotions, how to live with another person, to tolerate their quirks, and how to adapt and problem-solve when things don’t go as planned, how to be okay with uncertainty, how to let anxious and negative thoughts flow past me instead if letting it consume me, and how to not let nostalgia and sentimentality stop me from acting or feeling down, but use it as a tap on the shoulder to connect and reach out to friends and family, to remind myself to be grateful.
 - i love the bakeries here, also the display breads are real and composted at the end of the day, everyday, wow
 
