update who i am post

--- a/posts/120724.md
+++ b/posts/120724.md
@@ -6,5 +6,5 @@ date: 'Jul 12, 2024'
 
 - called so many dentist today, 3 consultations next week
 - did intros at a group lunch, heres what i said but perfected after a day of it playing in my head
-- Hi everyone, my name is Benedict and you can call me Ben. I was born and raised in Kuala Lumpur Malaysia. I always wanted to come to the US to achieve the typical American dream. I wanted to work in companies like Google or Apple and maybe start my own company one day. so I decided to do this program where i finished two years of college in Malaysia and then transfer to the US. I went to Iowa State university. It’s a peaceful college town, out can get a little bit too boring and it’s also very very cold in the winters. But I was lucky enough to spend two summers in the bay area. I realized I loved the Bay Area so much. I felt like I belonged and I got to meet so many interesting and cool people and went to a lot of fun events. I felt very inspired and optimistic here. And every since then I missed I wanted to come back. when I graduated, unfortunately because of the job market and health issues I decided to go back home. I took a six month break and the break was much needed. It helped me spend more time with my family, we travelled around Asia. I got to try out photography, made a fun little vlog, spent more time sketching, read a couple books. I’m very glad I get be in this program. Its really exciting to be meeting people from different backgrounds. I get to go to a ton of events, putting myself out there, increasing my surface area of luck. I hope I can continue doing this for the time being, and stay here this time. A meaningful place for me is home, it's where I grew up, where my family is, it's where i'm most comfortable and myself.
+- Hi everyone, my name is Benedict and you can call me Ben. I was born and raised in Kuala Lumpur, Malaysia. I always wanted to come to the US to achieve the typical American dream. I wanted to work in companies like Google or Apple and maybe start my own company one day. so I decided to do this program where i finished two years of college in Malaysia and then transfer to the US. I went to Iowa State university. It’s a peaceful college town, but can get a little bit too boring and it’s also very very cold in the winters. I was lucky enough to spend two summers in the bay area. I realized I loved the Bay Area so much. I felt like I belonged and I got to meet so many interesting and cool people and went to a lot of fun events. I felt very inspired and optimistic here. And ever since then I missed I wanted to come back. When I graduated, unfortunately because of the job market and health issues I decided to go back home. I took a six month break and the break was much needed. It helped me spend more time with my family, we travelled around Asia. I got to try out photography, made a fun little vlog, spent more time sketching, read a few books. I’m very glad I get be in this program. It's really exciting to be meeting people from different backgrounds. I get to go to a ton of events, putting myself out there, increasing my surface area of luck. I hope I can continue doing this for the time being, and stay here this time. A meaningful place for me is home, it's where I grew up, where my family is, it's where i'm most comfortable and myself.
 - i love chinatown, feels like home
