--- a/posts/130724.md
+++ b/posts/130724.md
@@ -20,17 +20,17 @@ from [I Didn't Do the Thing Today: Letting Go of Productivity Guilt by Madeleine
 
 even if you didn't do the thing today, find something to enjoy
 
-- enjoy the failures and mistakes–they're a sign we're trying
-- enjoy the unknown–it's where we discover something new
-- enjoy the rest, the boredom, the empty moments–that's where we find insight
-- enjoy the busy, too–that's where we can find momentum
-- enjoy the rut–that's where we can discover a new path
-- enjoy the wobble–that's where we find the variances that light us up
-- enjoy the learning–it's where we can never fail
-- enjoy the limitations–it's where we find awe and creativity
-- enjoy the choices we make as well as the plans that change–they're often the making of our lives
-- enjoy the comparisons with another–it's where we find our secret joy
-- enjoy the questions–because life would be dreary if we had all the answers
-- enjoy the doing–because the joy is in the doing, not the done
-- enjoy the incomplete–because that means there's more to come
-- enjoy the moments–if we tend to them, if we get the good out of every bit of them, what a life we'll have created
+- enjoy the **failures** and mistakes–they're a sign we're trying
+- enjoy the **unknown**–it's where we discover something new
+- enjoy the **rest**, the boredom, the empty moments–that's where we find insight
+- enjoy the **busy**, too–that's where we can find momentum
+- enjoy the **rut**–that's where we can discover a new path
+- enjoy the **wobble**–that's where we find the variances that light us up
+- enjoy the **learning**–it's where we can never fail
+- enjoy the **limitations**–it's where we find awe and creativity
+- enjoy the **choices** we make as well as the plans that change–they're often the making of our lives
+- enjoy the **comparisons** with another–it's where we find our secret joy
+- enjoy the **questions**–because life would be dreary if we had all the answers
+- enjoy the **doing**–because the joy is in the doing, not the done
+- enjoy the **incomplete**–because that means there's more to come
+- enjoy the **moments**–if we tend to them, if we get the good out of every bit of them, what a life we'll have created
