--- a/posts/100824.md
+++ b/posts/100824.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Aug 10, 2024'
 ---
 
-> i am not my past, my ideas, my thoughts, my beliefs, i am what i do
+> i am not my past, my ideas, my thoughts, or my beliefs. i am what i do
 
 - too much consumption today, too little creation. i hate staying home.
 - if someone used to be fine alone, but then certain people in their lives makes it hard to be alone afterwards, is the cure to just meet more people? the dynamics between self-actualization vs relationships, between choosing for others and for oneself, the heart or the mind, ambition or happiness.
