--- a/posts/130824.md
+++ b/posts/130824.md
@@ -21,7 +21,7 @@ date: 'Aug 13, 2024'
 
 [its okay to care too much](https://open.substack.com/pub/ava/p/its-okay-to-care-too-much) - Ava
 
-- you can guide where your attention falls bur you cant change what you care about. acceptance is what finally allows you to move on
+- you can guide where your attention falls but you cant change what you care about. acceptance is what finally allows you to move on
 - the problem with caring too much is that no one is truly accountable for your pain. their lack of reciprocity doesnt make them a bad person, and your expectations of it doesn't make you one either
 - giving other people permission to be the way they are is a sign that you give yourself permission to be the person you are
 - caring too much is the key to everything good in life
