--- a/posts/120824.md
+++ b/posts/120824.md
@@ -8,7 +8,7 @@ date: 'Aug 12, 2024'
 >
 > desire is a beautiful emotion and a visceral motivator. i think you should court it with a healthy respect. life is at once more serious and more exuberant if you do so. there is a sweetness tasted not just in success, but in enjoying the searches and quests themselves, and in maintaining a wistful imagination. the threat of failure is necessary to accept these benefits. if you cultivate only defense, you will not cultivate the others.
 >
-> - [simon sarris](https://map.simonsarris.com/p/quests-failure-desire)
+> – [simon sarris](https://map.simonsarris.com/p/quests-failure-desire)
 
 - glacier point hike
 - a lot can be said about what a person thinks about as he hikes on trails with only them and their mind, always in his head, surrounded by beauty of nature and the possibility of connection and friendship, but unable to appreciate it or fully give themselves to it
