update argonaut post

--- a/posts/170824.md
+++ b/posts/170824.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Aug 17, 2024'
 ---
 
-i woke up and my teeth starting hurting so much, i couldn't get out of bed. it feels like all my teeth were getting ripped apart, all at once.
+its the day after my first braces adjustment in the US. i woke up and my teeth starting hurting so much, i couldn't get out of bed. it feels like all my teeth were getting ripped apart, all at once.
 
 visited the [argonaut](https://argonautbookshop.com/) book shop today. discovered this book which contained the [inscription](https://orsl.stanford.edu/memorial-church-inscriptions) carved into the memorial church's sandstone walls at stanford.
 
