add salesforce post

--- a/posts/230824.md
+++ b/posts/230824.md
@@ -1,21 +1,33 @@
 ---
-title: 'google + ollama'
+title: 'salesforce park beer garden'
 tags: 'journal'
-date: 'Aug 22, 2024'
+date: 'Aug 23, 2024'
 ---
 
-> Blessed are the forgetful, for they get the better even of their blunders
+> "Marriage is "an institution committed to the dulling of the feelings," Susan Sontag once wrote. "The whole point of marriage is repetition." Agnes and Arnold felt that they had entered marriage without clearly thinking through what the institution was actually for. For many couples, marriage ends up being about making a family, and, when it fails to meet other needs, the couple lovingly and generously lets it fail. But Agnes was uncomfortable with the prospect of a relationship that had lost its aspirational character."
 >
-> – "Beyond Good and Evil", part VII ("Our Virtues"), aphorism 217.
+> [– what is partnership for?](https://open.substack.com/pub/ava/p/what-is-partnership-for)
 
-> Sometimes remembering things, be it good or bad, can leave you in a state of unhappiness. Spending too much time in your memory can leave you longing for the past, analyzing the past, not letting past things go, or regretting the past. Forgetfulness, many times, makes for a more lighthearted and simple way to experience the world.
+being in this program makes it hard to work on other things. my mornings are too short to do any substantial work before i have to get to class. classes and gym steals mental and physical energy, leaving little to none left for focused work at night. i get tired at 10 p.m., and i flounder around all the work i want to do until i'm too tired and i blog here before i sleep. i should sleep earlier, and wake up at 6 a.m. each day for a 3 hour work session.
+
+salesforce park is a nice spot to breath some clean air. i should go there some time to read. came here for a happy hour and had the most sour red wine i've had in my life that it made me dizzy.
 
 ---
 
-the best way to get a job imo is just twitter, learn in public, open source, and doing side projects, if you do interesting things, interesting people come to you. you could also cold email and dm people on twitter to maximize your chances. going through the job pipeline is just the normie way that makes your life difficult. out of hundreds of other applicants who are statistically more likely to be better than you, chances are so slim for you to get a callback, not to mention the job in the end. but the "best" way is also the hard way, it takes effort and dedication and time and passion to pursue that, if you're naturally a builder and you can write well and you post, you're in luck.
+answering the prompts to the interact fellowship 2024 application
 
-linear regression proofs are so tedious. requires high working memory and a clear mind. the exams for this class is going to be a pain. i can imagine myself putting in so many hours for this. hours that could go into building and creating. i wonder if training my brain to perform these tasks can help in other areas, i.e. in understanding deep learning. i suppose it will, it builds a mathematical mindset, to not let concepts slip away without proving them from scratch. it enforces understanding on a more fundamental level, if you break it down, and pinpoint the few moving parts that make up the whole system, you will attain understanding that is harder to falsify.
+1. Someone gives you $50,000 for a project that explicitly can’t be a business. What’s the project you work on and why?
 
-went to google 55 spear street for an ollama event. the demos were just marketing. nothing too interesting. the one on gemma models + crewai + ollama was slightly interesting. [paligemma](https://ai.google.dev/gemma/docs/paligemma) and [gemma scope](https://ai.google.dev/gemma/docs/gemma_scope) are things worth looking into.
+- 50k isn't a lot of money in the US, but its a considerable amount in Malaysia. i would use that money to fund something similar to socratica and buildspace. i believe the culture of building and creating and collaborating is missing in Malaysia. it was only after i came to the US for college, and after landing in the right corner of the internet, my levels of agency and taste were significantly increased. i want a third space for the passionate builders, writers, and designers of malaysia to gather together, to cowork and collaborate, and just make stuff, for the fun of it. i think experimenting and play is an essential part of figuring out what you’re good at, what gives you meaning in life, and finding work that you love to do. a lot of people in Malaysia have a fixed mindset of what they’re able to achieve in life, living lives that are expected of them, and I want to change that. side note: i made some efforts to start Socratica-like co-work sessions in malaysia, but i dropped it when I came to the US for my masters, but it’s something i want to pursue in the future.
 
-context switching from assignments, to the arc challenge, to the interact application, to some youtube videos, to the eternal sunshine of the spotless mind movie, to wishing i could read the dozens of book from sfpl, to this blog, to the time series grind for kevala, is probably a bad idea and i should just sleep. classic case of sleep procrastination. i' going to too many events, need to prioritize my time and say no to some of the events. the ROI of both technical knowledge and connections are not high enough. exposure to new things is great tho, talking to people there is 10x more valuable than the talks.
+1. What’s something you accomplished or created in the last year that you’re proud of?
+
+- i’ve been consistently writing a blog per day on my personal website (bneo.xyz) since april last year. i started writing technical content since i was a freshman in college, and i loved participating in essay competitions. i love the act of reading widely, and connecting and combining information from various sources, finding the patterns, and then organizing them a clear and smooth structure. i saw writing as communicating information. but i never saw the value in writing anything else, i was oblivious to the wide and vast ocean of personal blogging, when i discovered personal blogs and substack, where people share deeply personal and emotional writings, about how to live better, how to make friendships work in your 20s, how to love, and how to be more agentic, it triggered an inner reaction to also write about my own life, to document my own experiences, it gave me the permission to have a voice on the internet. having my own platform to dump my feelings, thoughts, ideas, and experiences has made me live life more intentionally and consume more thoughtfully.
+
+1. What qualities or skills best characterize the way you discover and solve problems?
+
+- curiosity and grit. i think with curiosity, you pay attention to the details, you ask more questions, and you ask the question within the question, and you start to discover the holes in many things in the world, gaps that can be filled with technology. with curiosity, you also talk to more people, you ask better questions, you read more blogs and books, and you form a map of things in your head, you combine things, and you come up with creative problems to solve. defining the problem is only the beginning, ideas are hard but execution is difficult. solving problems requires grit, it requires pounding a chisel at a rock over and over again, until you dig a hole that’s deep enough, that one day you hit a water vein. it’s showing up on the days where you don’t feel like it, and its doing whatever it takes to get whats in your head, the mindvirus, out into the world, into something real.
+
+1. Talk about a time a piece of writing, movie, conversation, art project, or other life experience changed your mind. How did your perspective change and why?
+
+- in 2020, malaysia went into full lockdown mode and i was at home with family. i had to take a semester gap break as I couldn’t leave to the US for school, so i spent a lot of time reading and learning ml. it was during this time that i developed GERD. it started a 3 year long journey into learning about what GERD was, going through cycles of acceptance and grief and depression and gratitude, learning to live with constraints, and adjusting my life style and taking half a dozen different medications to manage GERD. now that i’m temporarily cured with surgery, i learned a lot of things. first and foremost, health is the foundation to everything in life, it should never be taken for granted, and how quick it can disappear in any given day. and how you can easily feel stuck and hopeless, and how messed up the healthcare system is across the world, where medications take priority over understanding the human and the root cause. i realized life is short, and i might as well do what i love. i learned to prioritize, the right people and the right ideas, to focus on whats important. lastly, i saw value in suffering. it built up my tolerance for everything else i face in life, as long as i could find meaning in the suffering, i could get through anything.
