add interact post

--- a/posts/230824.md
+++ b/posts/230824.md
@@ -31,3 +31,7 @@ answering the prompts to the interact fellowship 2024 application
 1. Talk about a time a piece of writing, movie, conversation, art project, or other life experience changed your mind. How did your perspective change and why?
 
 - in 2020, malaysia went into full lockdown mode and i was at home with family. i had to take a semester gap break as I couldn’t leave to the US for school, so i spent a lot of time reading and learning ml. it was during this time that i developed GERD. it started a 3 year long journey into learning about what GERD was, going through cycles of acceptance and grief and depression and gratitude, learning to live with constraints, and adjusting my life style and taking half a dozen different medications to manage GERD. now that i’m temporarily cured with surgery, i learned a lot of things. first and foremost, health is the foundation to everything in life, it should never be taken for granted, and how quick it can disappear in any given day. and how you can easily feel stuck and hopeless, and how messed up the healthcare system is across the world, where medications take priority over understanding the human and the root cause. i realized life is short, and i might as well do what i love. i learned to prioritize, the right people and the right ideas, to focus on whats important. lastly, i saw value in suffering. it built up my tolerance for everything else i face in life, as long as i could find meaning in the suffering, i could get through anything.
+
+---
+
+Interact's Past Fellows describing interact ([1](https://interactfellowship.substack.com/p/b3dca211-d985-4b1b-84e5-36ca502d08f1), [2](https://interactfellowship.substack.com/p/describing-interact-no-2), [3](https://interactfellowship.substack.com/p/describing-interact-no-3))
