--- a/posts/270824.md
+++ b/posts/270824.md
@@ -18,4 +18,4 @@ too many projects and schoolwork and mini tasks that make me context switch. lik
 
 theres arc agi, improving my resume, studying up on the grid, on time series, building minitorch, learning ai, practicing python, my class homeworks, the asia bridge fellowship, articles i haven't wrote for the entire month, books that are collecting dust on my desk, so many little things that i easily switch around once i face something hard, or i just get distracted by. i need to be more disciplined with my time.
 
-i suppose life now is full of possibility, but also full of chaos, which task is the most important thing? what is guiding my attention? am i led by obligations (SHOULD) or curiosity and joy? i want to take up early in the morning and study with intense focus on one thing, and then spend the afternoon enjoying music, reading paris review, taking walks, exercising, napping, sketching, writing, cooking. this is the ideal life. to be able to work on what you love in the wee hours, and once you've done all you can for the day, set it aside and pursue on soul-replenishing tasks.
+i suppose life now is full of possibility, but also full of chaos, which task is the most important thing? what is guiding my attention? am i led by obligations (SHOULD) or curiosity and joy? i want to wake up early in the morning and study with intense focus on one thing, and then spend the afternoon enjoying music, reading paris review, taking walks, exercising, napping, sketching, writing, cooking. this is the ideal life. to be able to work on what you love in the wee hours, and once you've done all you can for the day, set it aside and pursue soul-replenishing tasks.
