--- a/posts/240824.md
+++ b/posts/240824.md
@@ -18,4 +18,4 @@ it was surreal being at the party and meeting everyone, i experienced firsthand 
 
 it was also my first time taking a shot of vodka, and a white claw as a chaser (the drink after the shot to flush out the aftertaste of strong liqueur). i experienced a bit of buzz yesterday drinking red wine, but this was intense.
 
-i remember being in a conversation, and everything around me started to slow down, i got really dizzy, and my head felt like a balloon. i had to sit down. it was like i had a third person perspective of myself and of the entire party. my social anxiety was killed. all my inhibitions and overthinking that went "should i say this", "should i say hi to that person" were muted. i just said things. the buzz felt really good. when it started to die down, i remember wanting more of it. if i never got GERD, i probably would become an alcoholic. then again, i wouldn't want alcohol to be an unlock for my social adaptation and fluency, i want to be able to do this sober. if i needed it every time i want to talk to more people, then its a clutch, its an addiction. maybe just one shot is the way to go.
+i remember being in a conversation, and everything around me started to slow down, i got really dizzy, and my head felt like a balloon. i had to sit down. it was like i had a third person perspective of myself and of the entire party. my social anxiety was killed. all my inhibitions and overthinking that went "should i say this", "should i say hi to that person" were muted. i just said things. the buzz felt really good. when it started to die down, i remember wanting more of it. if i never got GERD, i probably would become an alcoholic. then again, i wouldn't want alcohol to be an unlock for my social adaptation and fluency, i want to be able to do this sober. if i needed it every time i want to talk to more people, then its a crutch, its an addiction. maybe just one shot is the way to go.
