add labor day post

--- a/posts/020924.md
+++ b/posts/020924.md
@@ -5,3 +5,15 @@ date: 'Sep 2, 2024'
 ---
 
 > The only real test of intelligence is if you get what you want out of life – Naval
+
+overate for breakfast and had the urge to soak in some sunlight and move around. decided to take a walk to the ferry building. lots of tourists and families around. i haven't seen ferry building this busy before. went back to the same shop selling gifts by local artists where i bought the mini mechanical wood pencil i use to write marginalia for my books. they don't sell it anymore. there was a thrift shop within that shop that sells sweaters for $88 bucks.
+
+went out of the shop, bay bridge and yerba buena island in view. saw friends and family engaged in conversation and quality time outside restaurants and on the benches beside the port.
+
+went for a quick loop in book passage and saw the book "Chinatown Pretty: Fashion and Wisdom from Chinatown’s Most Stylish Seniors". found out Flushing is little taipei in NY. also wondered where these po po and gung gung are now. these pictures were taken 10 years ago. i hope they're still stylish and smiling and walking around chinatown. it inspired me to whip out my camera which has been trapped in my luggage for the past two months, and start taking photos of chinatown.
+
+i've been feeling more optimistic seeing human connection and kindness around me. watching people move their seats so that newcomers have space to sit down with their family is a small gesture that makes me feel happy. watching a korean parent with their two boys eating overpriced food is heartwarming. the dad reminds me of a ghibli character. there was a homeless (or backpacking?) woman writing a few postcards from the bookstore while mumbling to herself. i wonder what her story is. who is she writing to? is she on a great adventure? in a sense, is she more free than i am?
+
+i sat on the big table and tried to catch up on my blog for yesterday, but words just weren't coming out. its hard to relive experiences that happened just a day ago. i forget my thoughts and emotions quickly, i fear if i don't capture them, they disappear, which is a big part of why i write here. there was no wifi, and my data wasn't great too so i started reading the AI for energy paper by the US department of energy. ive been getting so passionate about the energy grid. i wonder if this is just a phase. i might have tunnel vision prioritizing kevala over meta.
+
+the rest of the day just melted away with lunch, working on a project analyzing ev charging station locations, cooking chicken teriyaki with w, and too many youtube clips of love, actually and gilmore.
